2009-05-03  Bruno Haible  <bruno@clisp.org>

	* HACKING (Building): Mention also the configure option
	--disable-static.

2009-05-03  Bruno Haible  <bruno@clisp.org>

	New configure option --disable-namespacing.
	* configure.ac: New option --disable-namespacing.
	(NAMESPACING): New substituted variable.
	* lib/Makefile.am (config.h): Don't alias any symbols if NAMESPACING is
	set to empty.
	* HACKING: New section "Building".

2009-05-01  Bruno Haible  <bruno@clisp.org>

	* doc/libunistring.texi: Enable the table of contents also in TeX mode.

2009-05-01  Bruno Haible  <bruno@clisp.org>

	Avoid "overfull hboxes" in the TeXed documentation.
	* doc/libunistring.texi (texnl): New macro.
	(Unicode, Autoconf macro): Use it.
	* doc/unictype.texi (Canonical combining class,
	Bidirectional category): Likewise.
	* doc/uniwbrk.texi (Word break property): Likewise.
	Reported by Ralf Wildenhues.

2009-05-01  Bruno Haible  <bruno@clisp.org>

	* lib/exported.sh.in: Fix quoting of argument reference.

2009-05-01  Bruno Haible  <bruno@clisp.org>

	* version.sh (GNULIB_GIT_COMMIT): New variable.
	* HACKING: Clarify which version of gnulib to use.
	Reported by Paolo Bonzini.

2009-04-28  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>  (tiny change)

	* doc/libunistring.texi: Fix typos.
	* doc/unistr.texi: Likewise.
	* doc/uniname.texi: Likewise.
	* doc/unictype.texi: Likewise.
	* doc/uninorm.texi: Likewise.

2009-04-28  Bruno Haible  <bruno@clisp.org>

	Make VPATH builds work off a git checkout.
	* lib/Makefile.am (config.h): Look for libunistring.sym first in the
	current directory.
	Reported by Ralf Wildenhues <Ralf.Wildenhues@gmx.de>.

2009-04-28  Thien-Thi Nguyen  <ttn@gnuvola.org>  (tiny change)

	Fix typos.
	* doc/uniconv.texi (uniconv.h): Fix typo.
	* doc/unictype.texi (Properties): Fix typo.

2009-04-28  Bruno Haible  <bruno@clisp.org>

	Doc tweaks.
	* doc/libunistring.texi: Fix typo.
	* doc/unistr.texi (u*_cmp2): Clarify what memcmp2 is.